tests/baselines/reference/unusedDestructuringLocals.errors.txt
tests/cases/compiler/unusedDestructuringLocals.ts(3,8): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedDestructuringLocals.ts(5,9): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedDestructuringLocals.ts(5,19): error TS6133: '_z' is declared but never used.


==== tests/cases/compiler/unusedDestructuringLocals.ts (3 errors) ====
    export {};
    // 'a' unused, '_b' is OK
    const [a, _b] = [1, 2];
           ~
!!! error TS6133: 'a' is declared but never used.
    // 'x' unused, '_y' is OK, '_z' unused
    const { x, y: _y, _z } = { x: 1, y: 2, _z: 3 };
            ~
!!! error TS6133: 'x' is declared but never used.
                      ~~
!!! error TS6133: '_z' is declared but never used.
    